<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unav_mpc</name>
  <version>0.1.0</version>
  <description>MPC controller node for autonomous drone cinematography.</description>
  <maintainer email="purnapatel99@gmail.com">purna</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>unav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
