<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unav_test</name>
  <version>0.1.0</version>
  <description>Test nodes for the autonomous drone system.</description>
  <maintainer email="purnapatel99@gmail.com">purna</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>unav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
